CF1-213 Swagger Docs Add faculty documentation Change date format for survey data documentation
